# mole-mac-cleaner

./: .gitignore  index.html
.github/workflows/: build.yml
gui-app/: index.html  package.json
gui-app/src/: App.css  App.jsx
gui-app/src-tauri/: Cargo.toml  tauri.conf.json
gui-app/src-tauri/icons/: .gitkeep  icon.icns
gui-app/src-tauri/src/: main.rs
landing-page/: index.html
