[package]
name = "mole"
version = "1.0.0"
description = "Mole - Mac Cleaner & Optimizer"
authors = ["shufflethis"]
license = "MIT"
repository = "https://github.com/shufflethis/mole-mac-cleaner"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
